fixed body element margins and cutoff issues for all pages

--- a/css/2fa_step1.css
+++ b/css/2fa_step1.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
 }
 .v2265_501 {
-  width: 100%;
+  width: 1536px;
   height: 960px;
   background: linear-gradient(rgba(0,151,184,1), rgba(0,55,68,1));
   opacity: 1;
