--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ a {
 }
 
 .v2246_577 {
-  width: 100%;
+  width: 1536px;
   height: 960px;
   background: linear-gradient(rgba(0,151,184,1), rgba(0,55,68,1));
   opacity: 1;
