--- a/css/medical_history.css
+++ b/css/medical_history.css
@@ -3,13 +3,14 @@
 }
 body {
   font-size: 14px;
+  margin: 0;
 }
 a {
   text-decoration: none;
   color: black;
 }
 .v1947_1398 {
-  width: 100%;
+  width: 1536px;
   height: 960px;
   background: linear-gradient(rgba(0,151,184,1), rgba(0,55,68,1));
   opacity: 1;
